[gd_scene load_steps=15 format=3 uid="uid://ykqyawdmdhq5"]

[ext_resource type="Texture2D" uid="uid://clyfcu122v03c" path="res://assets/sprites/enviornment/floor.png" id="1_yv6t8"]
[ext_resource type="Script" uid="uid://dikewkte6kvlh" path="res://scripts/other/gui.gd" id="2_amywo"]
[ext_resource type="Texture2D" uid="uid://bgyik0altasob" path="res://assets/sprites/enviornment/gui_counter.png" id="3_npot2"]
[ext_resource type="Texture2D" uid="uid://d4fim5kb5h4pg" path="res://assets/sprites/enviornment/gui_top.png" id="4_6onuh"]
[ext_resource type="FontFile" uid="uid://bu2fl6x507ljj" path="res://assets/fonts/4x4-font.ttf" id="5_ncfqg"]
[ext_resource type="Script" uid="uid://c2pdq1vfrqvvy" path="res://scripts/other/rects/fade_out.gd" id="6_uf5be"]
[ext_resource type="Script" uid="uid://jujrgwi2f0a1" path="res://scripts/components/camera/derivative_offset_comp.gd" id="7_qgdmr"]
[ext_resource type="Script" uid="uid://culob26q5v2f1" path="res://scripts/components/camera/zoom_camera_comp.gd" id="8_ju58u"]
[ext_resource type="PackedScene" uid="uid://delo0jd7o5o1h" path="res://scenes/units/appliance.tscn" id="9_ilgcb"]
[ext_resource type="Script" uid="uid://byb4xgni3q32d" path="res://scripts/other/tutorial_manager.gd" id="10_yv6t8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfqos"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leqql"]
size = Vector2(120, 39.5)

[sub_resource type="LabelSettings" id="LabelSettings_5amgp"]
line_spacing = 1.0
font = ExtResource("5_ncfqg")
font_size = 3
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yv6t8"]
line_spacing = 2.0
font = ExtResource("5_ncfqg")
font_size = 2
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(60, 35)
texture = ExtResource("1_yv6t8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(60, 45)
zoom = Vector2(0.755, 0.755)

[node name="Gui" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("2_amywo")

[node name="ColorRect" type="ColorRect" parent="Camera2D/Gui"]
offset_left = -6.0
offset_top = -4.0
offset_right = 125.0
offset_bottom = 111.0
color = Color(0.024, 0.039, 0.075, 0.724)

[node name="Selecting" type="StaticBody2D" parent="Camera2D/Gui"]
position = Vector2(-40, 0)

[node name="GuiCounter" type="Sprite2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(100, 110)
texture = ExtResource("3_npot2")

[node name="OvenButton" type="Area2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(64, 92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Gui/Selecting/OvenButton"]
position = Vector2(20.5, 13.5)
shape = SubResource("RectangleShape2D_cfqos")

[node name="RegisterButton" type="Area2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(26, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Gui/Selecting/RegisterButton"]
position = Vector2(25, 15)
shape = SubResource("RectangleShape2D_cfqos")

[node name="TableButton" type="Area2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(43, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Gui/Selecting/TableButton"]
position = Vector2(25, 15)
shape = SubResource("RectangleShape2D_cfqos")

[node name="RemoveButton" type="Area2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(77, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Gui/Selecting/RemoveButton"]
position = Vector2(25, 15)
shape = SubResource("RectangleShape2D_cfqos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Gui/Selecting"]
position = Vector2(100, 110.25)
shape = SubResource("RectangleShape2D_leqql")
disabled = true

[node name="TextGui" type="CanvasGroup" parent="Camera2D/Gui"]

[node name="GuiTop" type="Sprite2D" parent="Camera2D/Gui/TextGui"]
position = Vector2(60, 15)
texture = ExtResource("4_6onuh")

[node name="CashLabel" type="Label" parent="Camera2D/Gui/TextGui"]
offset_left = 23.0
offset_top = 1.0
offset_right = 50.0
offset_bottom = 5.0
text = "+9999$"
label_settings = SubResource("LabelSettings_5amgp")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1

[node name="PercentLabel" type="Label" parent="Camera2D/Gui/TextGui"]
offset_left = 71.0
offset_top = 1.0
offset_right = 95.0
offset_bottom = 5.0
text = "%100"
label_settings = SubResource("LabelSettings_5amgp")
vertical_alignment = 1
autowrap_mode = 1

[node name="FadeRect" type="CanvasLayer" parent="Camera2D"]

[node name="FadeAwayRect" type="ColorRect" parent="Camera2D/FadeRect"]
visible = false
offset_right = 120.0
offset_bottom = 90.0
color = Color(0.0235294, 0.0392157, 0.0745098, 1)
script = ExtResource("6_uf5be")

[node name="derivative_offset_comp" type="Node2D" parent="Camera2D"]
position = Vector2(-60, -45)
script = ExtResource("7_qgdmr")
metadata/_custom_type_script = "uid://jujrgwi2f0a1"

[node name="zoom_camera_comp" type="Node" parent="Camera2D"]
script = ExtResource("8_ju58u")
metadata/_custom_type_script = "uid://culob26q5v2f1"

[node name="Ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Appliances" type="Node2D" parent="Ysort"]
y_sort_enabled = true

[node name="0" parent="Ysort/Appliances" instance=ExtResource("9_ilgcb")]
position = Vector2(36, 42)

[node name="1" parent="Ysort/Appliances" instance=ExtResource("9_ilgcb")]
position = Vector2(48, 42)

[node name="2" parent="Ysort/Appliances" instance=ExtResource("9_ilgcb")]
position = Vector2(60, 42)

[node name="TutorialManager" type="Node2D" parent="Ysort"]
y_sort_enabled = true
position = Vector2(60, 98)
script = ExtResource("10_yv6t8")

[node name="Label" type="Label" parent="Ysort/TutorialManager"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
text = "welcome, [LMB] to continue"
label_settings = SubResource("LabelSettings_yv6t8")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Messes" type="Node2D" parent="Ysort" groups=["mess_organizer"]]

[connection signal="mouse_entered" from="Camera2D/Gui/Selecting/OvenButton" to="Camera2D/Gui" method="_on_oven_button_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Gui/Selecting/OvenButton" to="Camera2D/Gui" method="_on_oven_button_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Gui/Selecting/RegisterButton" to="Camera2D/Gui" method="_on_register_button_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Gui/Selecting/RegisterButton" to="Camera2D/Gui" method="_on_register_button_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Gui/Selecting/TableButton" to="Camera2D/Gui" method="_on_table_button_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Gui/Selecting/TableButton" to="Camera2D/Gui" method="_on_table_button_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Gui/Selecting/RemoveButton" to="Camera2D/Gui" method="_on_remove_button_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Gui/Selecting/RemoveButton" to="Camera2D/Gui" method="_on_remove_button_mouse_exited"]
